--- a/PESU_AT/src/main/resources/application.properties
+++ b/PESU_AT/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 # ===============================
 # = LOGGING
 # ===============================
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=ERROR
 
 # ===============================
