--- a/PESU_AT/src/main/resources/application.properties
+++ b/PESU_AT/src/main/resources/application.properties
@@ -21,7 +21,7 @@ logging.level.org.hibernate=ERROR
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/pesuat
 spring.datasource.username=root
-spring.datasource.password=Prajna2003
+spring.datasource.password=**********
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=5
